{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 27,
  "lineage": "5b3f418e-5fad-f658-2312-785bd1123d25",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:network-acl/acl-06fbee58ca20f29c2",
            "default_network_acl_id": "acl-06fbee58ca20f29c2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06fbee58ca20f29c2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "788841150814",
            "subnet_ids": [
              "subnet-05bace55b14a0000c",
              "subnet-06fb39fd44e60c004",
              "subnet-0925f4262dad09fc3",
              "subnet-09557dc7274ff28fc",
              "subnet-0cd7a59d654bfffc9",
              "subnet-0db11b26cd00a8c89"
            ],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-default",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-default",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:route-table/rtb-012bbdb117cf4086f",
            "default_route_table_id": "rtb-012bbdb117cf4086f",
            "id": "rtb-012bbdb117cf4086f",
            "owner_id": "788841150814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-default",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-default",
              "Team": "Network"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:security-group/sg-028be6b1fb9a173ee",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-028be6b1fb9a173ee",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "788841150814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-default",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-default",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:internet-gateway/igw-0b2b0a16445f3b456",
            "id": "igw-0b2b0a16445f3b456",
            "owner_id": "788841150814",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2b0a16445f3b456",
            "id": "r-rtb-01946e076a56c2f0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01946e076a56c2f0a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:route-table/rtb-0dcd9fc1bb8ea52ac",
            "id": "rtb-0dcd9fc1bb8ea52ac",
            "owner_id": "788841150814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:route-table/rtb-0f596dd8280f7989e",
            "id": "rtb-0f596dd8280f7989e",
            "owner_id": "788841150814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:route-table/rtb-0e55b2fcd2fef339e",
            "id": "rtb-0e55b2fcd2fef339e",
            "owner_id": "788841150814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:route-table/rtb-01946e076a56c2f0a",
            "id": "rtb-01946e076a56c2f0a",
            "owner_id": "788841150814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2b0a16445f3b456",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5f0ef71fcf3023a",
            "route_table_id": "rtb-0dcd9fc1bb8ea52ac",
            "subnet_id": "subnet-05bace55b14a0000c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbc0d37baef76c55",
            "route_table_id": "rtb-0f596dd8280f7989e",
            "subnet_id": "subnet-09557dc7274ff28fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7e960e3a7e2b868",
            "route_table_id": "rtb-0e55b2fcd2fef339e",
            "subnet_id": "subnet-0cd7a59d654bfffc9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf51618b9b8d32e1",
            "route_table_id": "rtb-01946e076a56c2f0a",
            "subnet_id": "subnet-0db11b26cd00a8c89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd3fdf35b446e3b",
            "route_table_id": "rtb-01946e076a56c2f0a",
            "subnet_id": "subnet-0925f4262dad09fc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05276406ce22b6d1f",
            "route_table_id": "rtb-01946e076a56c2f0a",
            "subnet_id": "subnet-06fb39fd44e60c004"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:subnet/subnet-05bace55b14a0000c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bace55b14a0000c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788841150814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:subnet/subnet-09557dc7274ff28fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09557dc7274ff28fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788841150814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:subnet/subnet-0cd7a59d654bfffc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd7a59d654bfffc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788841150814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:subnet/subnet-0db11b26cd00a8c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db11b26cd00a8c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788841150814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1a",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:subnet/subnet-0925f4262dad09fc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0925f4262dad09fc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788841150814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1b",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:subnet/subnet-06fb39fd44e60c004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fb39fd44e60c004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788841150814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1c",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1c",
              "Team": "Network"
            },
            "vpc_id": "vpc-03e03606048b60f97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788841150814:vpc/vpc-03e03606048b60f97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fbee58ca20f29c2",
            "default_route_table_id": "rtb-012bbdb117cf4086f",
            "default_security_group_id": "sg-028be6b1fb9a173ee",
            "dhcp_options_id": "dopt-05fa4fafc54034c77",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e03606048b60f97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012bbdb117cf4086f",
            "owner_id": "788841150814",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            }
          }
        }
      ]
    }
  ]
}